feat: terminar implementação de match